# TP_OpenGL

TP2/c++/: CMakeLists.txt
TP2/c++/include/: cylinder.h  drawable.h  pyramid.h  sphere.h  triangle.h  viewer.h
TP2/c++/shaders/: color.vert
TP2/c++/src/: cylinder.cpp  drawable.cpp  main.cpp  pyramid.cpp  sphere.cpp  triangle.cpp  viewer.cpp
TP3/c++/: CMakeLists.txt  README.md
TP3/c++/include/: cylinder.h  mesh.h  node.h  pyramid.h  shader.h  shape.h  sphere.h  triangle.h  viewer.h
TP3/c++/shaders/: color.frag  color.vert  node.vert
TP3/c++/src/: cylinder.cpp  main.cpp  mesh.cpp  node.cpp  pyramid.cpp  shader.cpp  shape.cpp  sphere.cpp  triangle.cpp  viewer.cpp
